--- a/Documentation/kube-flannel.yml
+++ b/Documentation/kube-flannel.yml
@@ -2,7 +2,7 @@
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: kube-flannel
+  name: kube-system
   labels:
     k8s-app: flannel
     pod-security.kubernetes.io/enforce: privileged
@@ -55,7 +55,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: flannel
-  namespace: kube-flannel
+  namespace: kube-system
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -63,13 +63,13 @@ metadata:
   labels:
     k8s-app: flannel
   name: flannel
-  namespace: kube-flannel
+  namespace: kube-system
 ---
 kind: ConfigMap
 apiVersion: v1
 metadata:
   name: kube-flannel-cfg
-  namespace: kube-flannel
+  namespace: kube-system
   labels:
     tier: node
     k8s-app: flannel
@@ -107,7 +107,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: kube-flannel-ds
-  namespace: kube-flannel
+  namespace: kube-system
   labels:
     tier: node
     app: flannel
